# aws-crypto-streaming-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
airflow/dags/: crypto_pipeline_dag.py
checkpoints/crypto_stats/: .metadata.crc  metadata
checkpoints/crypto_stats/commits/: .10.crc  .100.crc  .101.crc  .11.crc  .12.crc  .13.crc  .14.crc  .15.crc  .16.crc  .17.crc  .18.crc  .19.crc  .2.crc  .20.crc  .21.crc  .22.crc  .23.crc  .24.crc  .25.crc  .26.crc  .27.crc  .28.crc  .29.crc  .3.crc  .30.crc  .31.crc  .32.crc  .33.crc  .34.crc  .35.crc  .36.crc  .37.crc  .38.crc  .39.crc  .4.crc  .40.crc  .41.crc  .42.crc  .43.crc  .44.crc  (+160 more)
checkpoints/crypto_stats/offsets/: .10.crc  .100.crc  .101.crc  .102.crc  .11.crc  .12.crc  .13.crc  .14.crc  .15.crc  .16.crc  .17.crc  .18.crc  .19.crc  .2.crc  .20.crc  .21.crc  .22.crc  .23.crc  .24.crc  .25.crc  .26.crc  .27.crc  .28.crc  .29.crc  .3.crc  .30.crc  .31.crc  .32.crc  .33.crc  .34.crc  .35.crc  .36.crc  .37.crc  .38.crc  .39.crc  .4.crc  .40.crc  .41.crc  .42.crc  .43.crc  (+162 more)
checkpoints/crypto_stats/sources/0/: .0.crc  0
checkpoints/crypto_stats/state/0/0/: .10.delta.crc  .100.delta.crc  .101.delta.crc  (+193 more)
crypto_dbt/: .user.yml  profiles.yml
crypto_dbt/models/: schema.yml
crypto_dbt/models/marts/: fct_whale_alerts.sql
crypto_dbt/models/staging/: sources.yml  stg_crypto_trades.sql
src/processors/: spark_stream_processor.py
src/producers/: Dockerfile  binance_producer.py  requirements.txt  test_producer.py  test_watermark_producer.py
terraform/: main.tf  outputs.tf
(+532 files in other folders)
