[project]
name = "aws-crypto-streaming-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.7",
    "dbt-postgres>=1.10.0",
    "kafka-python-ng>=2.2.3",
    "psycopg2-binary>=2.9.11",
    "pyspark==3.5.0",
    "websocket-client>=1.9.0",
]
